[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "createrepo-agent"
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.scikit-build]
install.components = ["python"]
sdist.exclude = [
  ".editorconfig",
  ".github",
  ".gitignore",
  "CONTRIBUTING.md",
]
wheel.packages = []

[tool.scikit-build.cmake.define]
BUILD_TESTING = false
WITH_PYTHON = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = '''
set\(CRA_VERSION_MAJOR\s+(?P<major>\d+)\)
set\(CRA_VERSION_MINOR\s+(?P<minor>\d+)\)
set\(CRA_VERSION_PATCH\s+(?P<patch>\d+)\)
'''
result = "{major}.{minor}.{patch}"

[tool.cibuildwheel]
skip = "*-musllinux_*"
test-extras = ["test"]
test-command = [
  "python -m pytest {project}/test",
]

[tool.cibuildwheel.linux]
before-all = "dnf install -y createrepo_c-devel glib2-devel gpgme-devel libassuan-devel libgpg-error-devel"
